shady-skin Revision History
----------------------------------

2016-04-18:
- First steps with epg2vdr
- New icons for remote-timers

2016-04-10:
- Added lost equal sign and removed redundant whitespaces in tvguideng-root
- Optimized tablabels in detailviews
- Fixed position of scrollbar in displaymenutimers

2016-04-07:
- Added marker for switchtimer in tvguideng

2016-04-06:
- Enlarged size of posters in currentelements
- Added posterbackground in currentelements

2016-04-05:
- Unified currentelement of schedules, channels, recordings and timers
- Filled bottommost line of OSD with Black (workaround for?) 

2016-04-04:
- Added setup to show title and progressbar in active menuelement
- Added setup to show title and progressbar in active menuelement in displaymenuchannels

2016-04-02:
- Some fixes for numMenuItems < 13 

2016-03-29:
- Added optional bright cutmarks in displayreplay

2016-03-26:
- Some more stuff for plex II
- Added setup-submenu für pluginspecific settings

2016-03-11:
- First steps with plug-plex-detail

2016-03-06:
- Fixed bug in translation of setup-parameters

2016-02-25:
- Changed warnings related to wrong settings for columns and rows

2016-02-23:
- Adjusted y-values of progressbar in displayreplay
- Added graphics for progressbars

2016-02-22:
- Fixed layer in plug-plex-root
- Fixed int- and channel-selector in tvguideng-recmenu

2016-02-21:
- Conformed plex-grids to shady_KISS
- Reimplemented support for plexplugin
- Fixed twofold left curl brackets in displaymenutimers

2016-02-17:
- Added setup for main- and setupmenulist on the left or right side

2016-02-14:
- Adapted skinpreview
- Added setup for poster and EPGpic in detailinfos

2016-02-12:
- Changed {epgname} to {name} in menurecordings

2016-02-10:
- Adapted for skindesigner-0.8.x
- Some small fixes in menurecordings

2016-02-05:
- Fixed conditions in displaymenudetailrecording
- Fixed conditions in displaymenudetailepg and tvguideng-detail

2016-02-02: