@@ -54,6 +54,8 @@
 			<parameter type="int" name="07_notNewWatched-recordingsMarker" min="0" max="9" displaytext="{tr(07_notNewWatched-recordingsMarker)}">6</parameter>
 		</submenu>
 		<submenu name="Plugins" displaytext="Plugins">
+			<parameter type="bool" name="epg2vdr-skdPatch" displaytext="{tr(epg2vdr-skdPatch)}">0</parameter>
+			<parameter type="bool" name="epg2vdrShowHostname" displaytext="{tr(epg2vdrShowHostname)}">1</parameter>
 			<parameter type="string" name="plexDetail" displaytext="{tr(plexDetail)}" options="shadyStyle,fanartStyle">0</parameter>
 			<parameter type="bool" name="sysinfoPBtheme" displaytext="{tr(sysinfoPBtheme)}">1</parameter>
 			<parameter type="bool" name="tvgngDescriptionScroll" displaytext="{tr(tvgngDescriptionScroll)}">0</parameter>
@@ -302,6 +304,14 @@
 		<token name="tr(07_notNewWatched-recordingsMarker)">
 			<trans lang="en_EN">Marker for recordings seen &gt; 85%</trans>
 			<trans lang="de_DE">Marker f&#252;r Aufnahmen gesehen &gt; 85%</trans>
+		</token>
+		<token name="tr(epg2vdr-skdPatch)">
+			<trans lang="en_EN">Skindesigner is patched for epg2vdr</trans>
+			<trans lang="de_DE">Skindesigner ist gepatcht für epg2vdr</trans>
+		</token>
+		<token name="tr(epg2vdrShowHostname)">
+			<trans lang="en_EN">Shown hostname of remote-timers in epg2vdr-menu 'Timer'</trans>
+			<trans lang="de_DE">Zeige Hostname der Remote-Timer im epg2vdr-Menü 'Timer'</trans>
 		</token>
 		<token name="tr(plexDetail)">
 			<trans lang="en_EN">Background Plex-Detail</trans>
