@@ -47,22 +47,31 @@
 				<area x="{areawidth}*0.485" width="5%" layer="3">
 					<drawtext x="0" valign="center" font="{light}" fontsize="59%" color="{clrLightGray}" text="{timerstart}"/>
 				</area>
-				<area condition="not{isremote}" x="{areawidth}*0.535" width="2%" layer="4">
+				<area condition="not{epg2vdr-skdPatch}" x="{areawidth}*0.535" width="2%" layer="4">
 					<drawimage condition="{flagrecording}" x="0" y="10%" width="{areaheight}*0.8*39/57" height="{areaheight}*0.8" imagetype="skinpart" path="redMarker" />
 					<drawimage condition="{flagactive}++not{flagrecording}" x="0" y="10%" width="{areaheight}*0.8*39/57" height="{areaheight}*0.8" imagetype="skinpart" path="greenMarker" />
 					<drawimage condition="not{flagactive}" x="0" y="10%" width="{areaheight}*0.8*39/57" height="{areaheight}*0.8" imagetype="skinpart" path="yellowMarker" />
 				</area>
-				<areascroll condition="not{isremote}" scrollelement="timertext" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="{areawidth}*0.555" width="38%" layer="3">
+				<areascroll condition="not{epg2vdr-skdPatch}" scrollelement="timertext" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="{areawidth}*0.555" width="38%" layer="3">
 					<drawtext name="timertext" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{title}"/>
 				</areascroll>
-											
-				<area condition="{isremote}" x="{areawidth}*0.535" width="2%" layer="4">
+	
+				<area condition="not{isremote}++{epg2vdr-skdPatch}" x="{areawidth}*0.535" width="2%" layer="4">
+					<drawimage condition="{flagrecording}" x="0" y="10%" width="{areaheight}*0.8*39/57" height="{areaheight}*0.8" imagetype="skinpart" path="redMarker" />
+					<drawimage condition="{flagactive}++not{flagrecording}" x="0" y="10%" width="{areaheight}*0.8*39/57" height="{areaheight}*0.8" imagetype="skinpart" path="greenMarker" />
+					<drawimage condition="not{flagactive}" x="0" y="10%" width="{areaheight}*0.8*39/57" height="{areaheight}*0.8" imagetype="skinpart" path="yellowMarker" />
+				</area>
+				<area condition="{isremote}++{epg2vdr-skdPatch}" x="{areawidth}*0.535" width="2%" layer="4">
 					<drawimage condition="{flagactive}" x="10%" y="28%" width="{areaheight}*0.44" height="{areaheight}*0.44" imagetype="icon" path="remoteOn" />
 					<drawimage condition="not{flagactive}" x="10%" y="28%" width="{areaheight}*0.44" height="{areaheight}*0.44" imagetype="icon" path="remoteOff" />
 					<drawimage condition="{flagrecording}" x="10%" y="28%" width="{areaheight}*0.44" height="{areaheight}*0.44" imagetype="icon" path="remoteRec" />
 				</area>
-				<areascroll condition="{isremote}" scrollelement="timertext" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="{areawidth}*0.555" width="38%" layer="3">
-					<drawtext name="timertext" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{vdrname} - {title}"/>
+				<areascroll condition="not{isremote}++{epg2vdr-skdPatch}" scrollelement="timertext" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="{areawidth}*0.555" width="38%" layer="3">
+					<drawtext name="timertext" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{title}"/>
+				</areascroll>
+				<areascroll condition="{isremote}++{epg2vdr-skdPatch}" scrollelement="timertext" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="{areawidth}*0.555" width="38%" layer="3">
+					<drawtext condition="{epg2vdrShowHostname}" name="timertext" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{vdrname} - {title}"/>
+					<drawtext condition="not{epg2vdrShowHostname}" name="timertext" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{title}"/>
 				</areascroll>	
 			</areacontainer>
 
@@ -77,22 +86,31 @@
 				<drawtext x="10" width="100%" valign="center" font="{light}" fontsize="59%" color="{clrLightGray}" text="{timerstart}-{timerstop}"/>
 				</area>
 
-				<area condition="not{isremote}" x="{areawidth}*0.5775" width="2%" layer="4">
+				<area condition="not{epg2vdr-skdPatch}" x="{areawidth}*0.5775" width="2%" layer="4">
 					<drawimage condition="{flagrecording}" x="0" y="10%" width="{areaheight}*0.8*39/57" height="{areaheight}*0.8" imagetype="skinpart" path="redMarker" />
 					<drawimage condition="{flagactive}++not{flagrecording}" x="0" y="10%" width="{areaheight}*0.8*39/57" height="{areaheight}*0.8" imagetype="skinpart" path="greenMarker" />
 					<drawimage condition="not{flagactive}" x="0" y="10%" width="{areaheight}*0.8*39/57" height="{areaheight}*0.8" imagetype="skinpart" path="yellowMarker" />
 				</area>
-				<areascroll condition="not{isremote}" scrollelement="timertext" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="60%" width="33%" layer="3">
+				<areascroll condition="not{epg2vdr-skdPatch}" scrollelement="timertext" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="60%" width="33%" layer="3">
 					<drawtext name="timertext" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{title}"/>
 				</areascroll>
-
-				<area condition="{isremote}" x="{areawidth}*0.5775" width="2%" layer="4">
+				
+				<area condition="not{isremote}++{epg2vdr-skdPatch}" x="{areawidth}*0.5775" width="2%" layer="4">
+					<drawimage condition="{flagrecording}" x="0" y="10%" width="{areaheight}*0.8*39/57" height="{areaheight}*0.8" imagetype="skinpart" path="redMarker" />
+					<drawimage condition="{flagactive}++not{flagrecording}" x="0" y="10%" width="{areaheight}*0.8*39/57" height="{areaheight}*0.8" imagetype="skinpart" path="greenMarker" />
+					<drawimage condition="not{flagactive}" x="0" y="10%" width="{areaheight}*0.8*39/57" height="{areaheight}*0.8" imagetype="skinpart" path="yellowMarker" />
+				</area>
+				<area condition="{isremote}++{epg2vdr-skdPatch}" x="{areawidth}*0.5775" width="2%" layer="4">
 					<drawimage condition="{flagactive}" x="10%" y="28%" width="{areaheight}*0.44" height="{areaheight}*0.44" imagetype="icon" path="remoteOn" />
 					<drawimage condition="not{flagactive}" x="10%" y="28%" width="{areaheight}*0.44" height="{areaheight}*0.44" imagetype="icon" path="remoteOff" />
 					<drawimage condition="{flagrecording}" x="10%" y="28%" width="{areaheight}*0.44" height="{areaheight}*0.44" imagetype="icon" path="remoteRec" />
 				</area>
-				<areascroll condition="{isremote}" scrollelement="timertext" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="60%" width="33%" layer="3">
-					<drawtext name="timertext" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{vdrname} - {title}"/>
+				<areascroll condition="not{isremote}++{epg2vdr-skdPatch}" scrollelement="timertext" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="60%" width="33%" layer="3">
+					<drawtext name="timertext" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{title}"/>
+				</areascroll>
+				<areascroll condition="{isremote}++{epg2vdr-skdPatch}" scrollelement="timertext" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="60%" width="33%" layer="3">
+					<drawtext condition="{epg2vdrShowHostname}" name="timertext" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{vdrname} - {title}"/>
+					<drawtext condition="not{epg2vdrShowHostname}" name="timertext" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{title}"/>
 				</areascroll>
 			</areacontainer>
 		</listelement>
